# grantbotai_project

./: .dockerignore  .env.example  Makefile  README.md  pyproject.toml
app/: config.py  db.py  llm.py  logger.py  main.py  models.py
app/routers/: generate.py  history.py
docker/: Dockerfile.api  Dockerfile.mongo  docker-compose.yml
docker/mongo-init/: startup.sh
tests/: test_config.py  test_db.py  test_llm.py  test_main.py  test_routers.py
