[tool.poetry]
name = "grantbotai-project"
version = "0.1.0"
description = ""
authors = ["M-Borsuk <mtszborsuk212@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.121.3"
uvicorn = "^0.38.0"
pymongo = "^4.15.4"
openai = "^2.8.1"
pydantic = "^2.12.4"
numpy = "^2.3.5"
python-dotenv = "^1.2.1"
scikit-learn = "^1.7.2"
torch = "^2.9.1"
transformers = "^4.57.1"
pydantic-settings = "^2.12.0"


[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
isort = "^7.0.0"
pytest = "^9.0.1"
flake8 = "^7.3.0"
pytest-mock = "^3.15.1"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100


